tests/rosetta/out/Fortran/best-shuffle.error
gfortran: exit status 1
/tmp/best-shuffle.f90:66:5:

   66 |     t = r(((0)+1))
      |     1
Error: Unclassifiable statement at (1)
/tmp/best-shuffle.f90:111:8:

  111 |     seed = 1
      |        1
Error: Symbol ‘seed’ at (1) has no IMPLICIT type
/tmp/best-shuffle.f90:110:25:

  110 |     ts = (/'abracadabra','seesaw','elk','grrrrrr','up','a'/)
      |                         1
Error: Different CHARACTER lengths (11/6) in array constructor at (1)
/tmp/best-shuffle.f90:119:35:

  119 |       print *, trim(trim(trim(trim(ts(((i)+1)) // ' -> ') // shuf) // ' (') // s2) // ')'
      |                                   1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(4)
/tmp/best-shuffle.f90:39:28:

   39 |       app0(size(chars)+1) = s(i+1:(i + 1))
      |                            1
Error: Cannot convert CHARACTER(*) to INTEGER(4) at (1)
/tmp/best-shuffle.f90:35:24:

   35 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/best-shuffle.f90:53:10:

   53 |     res = ''
      |          1
Error: Cannot convert CHARACTER(0) to INTEGER(4) at (1)
/tmp/best-shuffle.f90:59:4:

   59 |     res = (/res,sd/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/best-shuffle.f90:70:24:

   70 |     do while ((i < size(t)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/best-shuffle.f90:82:30:

   82 |         if ((((((i /= j) .and. arr(((i)+1))) /= s(j+1:(j + 1))) .and. arr(((j)+1))) /= s(i+1:(i + 1)))) then
      |                              1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/best-shuffle.f90:95:11:

   95 |       if ((arr(((i)+1)) == s(i+1:(i + 1)))) then
      |           1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(*)
/tmp/best-shuffle.f90:103:13:

  103 |       out = (out + arr(((i)+1)))
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/best-shuffle.f90:106:16:

  106 |     res = (/out,sd,count/)
      |                1
Error: Element in CHARACTER(100) array constructor at (1) is INTEGER(4)
